Add production-ready features: PostgreSQL, JWT auth, rate limiting, CI/CD
Major improvements:
- PostgreSQL database with connection pooling and migrations
- JWT authentication with bcrypt password hashing
- Rate limiting middleware (100 req/min per IP)
- Request ID middleware for distributed tracing
- Structured logging with slog
- Comprehensive input validation
- GitHub Actions CI/CD pipeline (test, lint, build, security)
- Docker Compose setup with PostgreSQL
- Test coverage: 34.3% overall (99.2% on repository layer)
- Mobile integration guides for iOS and Android
- API quick reference documentation

New components:
- Authentication layer (JWT + bcrypt)
- PostgreSQL repositories (users, messages)
- Database connection pooling
- Typed domain errors
- Constants package
- Auth, rate limiting, and request ID middleware
- Comprehensive handler and repository tests

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ENVIRONMENT=development
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=sqaure_enix
+DB_NAME=subspace
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_SSL_MODE=disable
